# ChangeLog for g-cpan
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  23 Mar 2007; Michael Cummings <mcummings@gentoo.org> ChangeLog:
  Fixed potential bug with checking to see if the module was installed with
  dev-lang/perl - only checking now if it isn't part of the actual request, ie
  g-cpan -i CPAN will work again (dep checking still the same, but now
  perl-gcpan is checked first just to be safe)

  23 Mar 2007; Michael Cummings <mcummings@gentoo.org> ChangeLog:
  Fixed CPAN.pm line 260 - overzealous reading of meta*yml files

  23 Mar 2007; Michael Cummings <mcummings@gentoo.org> ChangeLog:
  Fix for bug 171686 - thats right, allow -u but failed to call --update in flags

  21 Mar 2007; Michael Cummings <mcummings@gentoo.org> ChangeLog:
  Added message for buildpkg users to update /etc/portage/packages, thanks
  fuzzyray :)

  09 Mar 2007; Michael Cummings <mcummings@gentoo.org> ChangeLog:
  Reverting change from bug 167776, niko and talked it over - was right the
  first time. actual fix was elsewhere when i fixed the env imports.

*g-cpan-0.15_rc3 (03 Mar 2007)

  03 Mar 2007; Michael Cummings <mcummings@gentoo.org>:
  Officially removing Config.pm; prepping for snapshot for portage.

  02 Mar 2007; Michael Cummings <mcummings@gentoo.org>:
  More cleaning up of env vars. I think I have this licked now.

  02 Mar 2007; Michael Cummings <mcummings@gentoo.org>:
  Final tweaks for bug 142005; now noting gracefully when our search has
  revealed a core perl module

  01 Mar 2007; Michael Cummings <mcummings@gentoo.org>:
  Bug 166718. A temporary solution for this ACCEPT_KEYWORDS bug, will provide
  a cleaner when we refactor.

  26 Feb 2007; Michael Cummings <mcummings@gentoo.org>:
  Bug 167776, thanks Nicolas. Silly bug on portage_bases.

*g-cpan-0.15_rc2 (11 Feb 2007)

  11 Feb 2007; Michael Cummings <mcummings@gentoo.org>:
  Bug 158163 - Added a check before generating a module from CPAN to verify